sidebar position shifted back to fixed

--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -12,9 +12,9 @@
 }
 .sidebottom {
   position: fixed;
-  top: 70vh;
+  bottom: 0;
   transition: all 0.05s ease;
-  background-color: rgba(255, 255, 255, 0.1);
+  /* background-color: rgba(255, 255, 255, 0.1); */
 }
 .bottom-hide {
   display: none;
